Finish: Lab 06 exercise complete

--- a/Labo 06/Ejercicio 01/Ejercicio 01/Ejercicio 01.csproj
+++ b/Labo 06/Ejercicio 01/Ejercicio 01/Ejercicio 01.csproj
@@ -39,7 +39,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="CalcularNota.cs" />
-        <Compile Include="Evaluación.cs" />
+        <Compile Include="Evaluacion.cs" />
         <Compile Include="Laboratorio.cs" />
         <Compile Include="Parcial.cs" />
         <Compile Include="Program.cs" />
